--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@toy-js/client",
   "version": "1.1.1",
-  "description": "Simplify creation of remote service",
+  "description": "Expose the API client created by @toy-js/server",
   "module": "./lib/index.js",
   "typings": "lib/types/index.d.ts",
   "sideEffects": true,
@@ -10,15 +10,12 @@
     "url": "git+https://github.com/jituanlin/toy-js.git"
   },
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["toy-js","xhr","http","ajax","socket.io"],
   "scripts": {
     "build": "rm -R ./lib & tsc"
   },
   "engines": {
     "node": ">=10"
-  },
-  "directories": {
-    "lib": "lib"
   },
   "files": [
     "lib"
@@ -26,31 +23,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "ava": {
-    "failFast": true,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "build/main/"
-      }
-    },
-    "files": [
-      "!build/module/**"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "prettier": {
     "singleQuote": true
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.js"
-    ]
   },
   "dependencies": {
     "@toy-js/shared": "^1.1.1",
