--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@toy-js/server",
   "version": "1.1.1",
-  "description": "Simplify creation of remote service",
+  "description": "Simplify the creation of simple node server",
   "main": "./lib/index.js",
   "module": "/lib/index.js",
-  "typings": "lib/index.d.ts",
   "sideEffects": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jituanlin/toy-js.git"
   },
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["toy-js","node","framework"],
   "scripts": {
     "build": "rm -R ./lib & tsc"
   },
@@ -21,31 +20,8 @@
   "files": [
     "lib"
   ],
-  "ava": {
-    "failFast": true,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "build/main/"
-      }
-    },
-    "files": [
-      "!build/module/**"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "prettier": {
     "singleQuote": true
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.js"
-    ]
   },
   "dependencies": {
     "@toy-js/shared": "^1.1.1",
@@ -60,8 +36,7 @@
   "homepage": "https://github.com/jituanlin/toy-js#readme",
   "author": "jituanlin <jituanlin@tencent.com>",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "publishConfig": {
     "access": "public"
