--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,7 +30,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "fp-ts": "^3.0.0-alpha.6",
-    "ramda": "^0.27.1",
     "rxjs": "^6.6.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3"
   }
 }
